--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,13 @@
   font-family: sans-serif;
   text-align: center;
 }
+.container {
+  display: flex;
+  flex-direction: column ;
+  align-items: center;
+
+  max-width: 200px;
+
+  margin: 0 auto;
+
+}
